--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <script src="./script.js"></script>
-    <title>Document</title>
+    <title>Steady Study</title>
 </head>
 
 <body>
-    <img class="background" src='./assets/background.gif'></div>
+
     <div class="container">
-        <iframe id="yt-lofi" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video player"
-            frameborder="0"
+        <iframe id="yt-lofi" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube lofi player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
@@ -39,13 +38,29 @@
                     00:00
                 </div>
             </div>
+            <div class="to-do-container">
+                <h2>To Do</h2>
+                <ul>
 
-            <div class="youtube">
-                <iframe src="https://www.google.com/" height=460 width=1100 id="yt-window"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                </ul>
+                <div class="add-to-do">
+                    <input style="margin:auto;width:60%;" id="input-text" type="text" maxlength="100">
+                    <img src="https://cdn3.iconfinder.com/data/icons/stroke/53/Button-512.png" onclick="AddToDo()"
+                        class="add-btn">
+                </div>
+
             </div>
+
+
         </div>
+        <div class="google">
+            <!-- <iframe src="https://www.google.com/" height=460 width=1100 id="yt-window"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe> -->
+
+        </div>
+
+
 
     </div>
     </div>
