--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
-        href="https://firebasestorage.googleapis.com/v0/b/stegnographer.appspot.com/o/img_452028.ico?alt=media&token=c8f43909-d355-4a5a-9c69-c6e0ca25a4ac"
+        href="https://cdn.icon-icons.com/icons2/504/PNG/512/child-reading-book_icon-icons.com_49243.png"
         type="image/x-icon">
     <script src="./script.js"></script>
     <title>Steady Study</title>
