--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
     <link rel="shortcut icon"
-        href="https://cdn.icon-icons.com/icons2/504/PNG/512/child-reading-book_icon-icons.com_49243.png"
+        href="https://firebasestorage.googleapis.com/v0/b/projectbucket-52626.appspot.com/o/shortcuticon.ico?alt=media&token=8276b229-f4d2-4f8e-bf8c-7afc4ab29c38"
         type="image/x-icon">
     <script src="./script.js"></script>
     <title>Steady Study</title>
