Updated Social Links

--- a/index.html
+++ b/index.html
@@ -71,11 +71,18 @@
         <div class="credits">
             This Project is an Initivate By Om Mukherjee. The Source Code for this project will be visible soon.
             <div class="socials">
-                <a href="" id="instagram">
-                    <img src="">
+                <a href="https://www.instagram.com/oyum.codes/">
+                    <img src="https://www.freepngimg.com/thumb/logo/69768-logo-computer-layout-instagram-icons-png-file-hd.png"
+                        id="instagram">
                 </a>
-                <a href="" id="Github"></a>
-                <a href="" id="email"></a>
+                <a href="https://github.com/Oyum2814">
+                    <img src="https://img.favpng.com/4/20/21/github-computer-icons-icon-design-png-favpng-KaDTwuHWgG8D1qn47QW2hK7Gj.jpg"
+                        id="github">
+                </a>
+                <a href="mailto:om28mukherjee@gmail.com">
+                    <img src="https://mpng.subpng.com/20190524/xpg/kisspng-computer-icons-portable-network-graphics-transpare-5ce77b84bdbde8.3579094815586743087772.jpg"
+                        id="email">
+                </a>
             </div>
         </div>
     </div>
