--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <img src="https://images.unsplash.com/photo-1511300636408-a63a89df3482?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80"
+    <img src="https://images.unsplash.com/photo-1638367819363-345a7942afa8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2912&q=80"
         class="background-layer">
     <div class="container">
         <iframe id="yt-lofi" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube lofi player" frameborder="0"
@@ -29,8 +29,7 @@
                 <h2>Timer</h2>
                 <div class="upper-section-timer">
                     <div class="inputs">
-                        <input type="number" id="timeInput" placeholder="Set Time in Minutes" min="1" max="600"
-                            maxlength="3">
+                        <input type="number" id="timeInput" placeholder="Minutes" min="1" max="12000" maxlength="3">
                     </div>
                     <div class="other-buttons-timer">
                         <img id="timer" src="http://cdn.onlinewebfonts.com/svg/img_42264.png" onclick="setup()">
@@ -55,8 +54,7 @@
                 </ul>
                 <div class="add-to-do">
                     <input style="margin:auto;width:60%;" id="input-text" type="text" maxlength="100">
-                    <img src="https://cdn3.iconfinder.com/data/icons/stroke/53/Button-512.png" onclick="AddToDo()"
-                        class="add-btn">
+                    <img src="http://cdn.onlinewebfonts.com/svg/img_28512.png" onclick="AddToDo()" class="add-btn">
                 </div>
             </div>
 
